--- a/assets/pages/bucles.html
+++ b/assets/pages/bucles.html
@@ -20,6 +20,6 @@
         </ul>
     </nav>
     <p>Federico Val - Cohort 52</p>
-    <script src="../js/test.js"></script>
+    <script src="../js/bucles.js"></script>
 </body>
 </html>
