Separe todo en carpetas

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h3>Seleccione un ejercicio de la lista de abajo</h3>
     <nav>
         <ul>
-            <li><a href="./assets/pages/Introduccion.html">Introduccion a JS</a></li>
-            <li><a href="./assets/pages/condicionales.html">Condicionales</a></li>
-            <li><a href="./assets/pages/funciones.html">Funciones</a></li>
-            <li><a href="./assets/pages/bucles.html">Bucles</a></li>
+            <li><a href="./Intro a JavaScript/Introduccion.html">Introduccion a JS</a></li>
+            <li><a href="./Condicionales/condicionales.html">Condicionales</a></li>
+            <li><a href="./Funciones/funciones.html">Funciones</a></li>
+            <li><a href="./Bucles/bucles.html">Bucles</a></li>
         </ul>
     </nav>
     <p>Federico Val - Cohort 52</p>
